--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -18,6 +18,7 @@ input.mayusculas, textarea.mayusculas {
   text-transform: uppercase;
 }
 
+/*
 h1 {
   padding: 0;
   margin: 0;
@@ -28,7 +29,7 @@ h1 {
   line-height: 1.2em;
   color: dimgray;
 }
-
+*/
 h2 {
   font-size: 2em;
   font-weight: bold;
@@ -65,14 +66,6 @@ label span {
 .font-white {
   color: white;
 }
-
-footer {
-  bottom: 0;
-  height: 60px;
-  font-size: 12px;
-}
-
-footer div { text-align: center; }
 
 legend {
   background-color: lightgray;
@@ -156,7 +149,6 @@ legend {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 5px;
   height: 3px;
   width: 100%;
 }
